# transcarread

./: .gitignore  .travis.yml  PlotTranscarInput.py  README.md  README.rst  diff_state.py  excitation_rates.py  optical_emissions.py  plasma_state.py  precip_flux.py  pyproject.toml  readTranscar.py  read_tra.py  readionoinit.py  requirements.txt  setup.cfg  setup.py  test_ionoinit.py  test_readExcrates.py  test_readTranscar.py  test_readtra.py  transcar2aurora.py  transcar2excitationrates.py  transcar2isr.py
test/: test.py
test/data/beam52.726/dir.output/: transcar_output
tests/: test.py  test_all.py
transcarread/: __init__.py  io.py  isriono.py  parseTranscar.py  plots.py  readExcrates.py  readTranscar.py  read_tra.py  readionoinit.py
