[metadata]
name = transcarread
version = 1.1.0
author = Michael Hirsch, Ph.D.
author_email = scivision@noreply.users.github.com
description = read and plot Transcar 1-D particle precipitation ionospheric model.
url = https://github.com/space-physics/transcarrread
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Scientific/Engineering :: Atmospheric Science
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
packages = find:
scripts =
  PlotTranscarInput.py
  transcar2aurora.py
  transcar2excitationrates.py
  transcar2isr.py
install_requires =
  python-dateutil
  numpy >= 1.12
  xarray
  scipy

[options.extras_require]
tests =
  pytest
lint =
  flake8
  mypy
plots =
  matplotlib
  seaborn
